sintatico.output
Terminals unused in grammar

   INTEIRO
   FOR
   RETURN
   EXTERN
   VOID
   UMINUS


Grammar

    0 $accept: programa $end

    1 programa: declaracoes '{' lista_cmds '}'

    2 declaracoes: linha_decl
    3            | linha_decl declaracoes

    4 $@1: /* empty */

    5 linha_decl: type $@1 lista_id ';'

    6 type: INT
    7     | CHAR

    8 lista_id: ID
    9         | ID ',' lista_id

   10 lista_cmds: cmd ';'
   11           | cmd ';' lista_cmds
   12           | stmt
   13           | stmt lista_cmds

   14 cmd: cmd_saida
   15    | cmd_atribuicao

   16 stmt: stmt_if
   17     | stmt_while

   18 stmt_if: IF '(' expr ')' '{' lista_cmds '}'
   19        | IF '(' expr ')' '{' lista_cmds '}' ELSE '{' lista_cmds '}'

   20 stmt_while: WHILE '(' expr ')' '{' lista_cmds '}'

   21 cmd_saida: ESCREVA '(' expr ')'

   22 cmd_atribuicao: ID '=' expr

   23 expr: term
   24     | expr binop term2

   25 term: NUM
   26     | ID

   27 term2: NUM
   28      | ID

   29 binop: ADD
   30      | SUB
   31      | MUL
   32      | DIV


Terminals, with rules where they appear

$end (0) 0
'(' (40) 18 19 20 21
')' (41) 18 19 20 21
',' (44) 9
';' (59) 5 10 11
'=' (61) 22
'{' (123) 1 18 19 20
'}' (125) 1 18 19 20
error (256)
INT (258) 6
CHAR (259) 7
INTEIRO (260)
ESCREVA (261) 21
NUM (262) 25 27
ID (263) 8 9 22 26 28
IF (264) 18 19
ELSE (265) 19
WHILE (266) 20
FOR (267)
RETURN (268)
EXTERN (269)
VOID (270)
ADD (271) 29
SUB (272) 30
DIV (273) 32
MUL (274) 31
UMINUS (275)
THEN (276)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
programa (30)
    on left: 1, on right: 0
declaracoes (31)
    on left: 2 3, on right: 1 3
linha_decl (32)
    on left: 5, on right: 2 3
$@1 (33)
    on left: 4, on right: 5
type (34)
    on left: 6 7, on right: 5
lista_id (35)
    on left: 8 9, on right: 5 9
lista_cmds (36)
    on left: 10 11 12 13, on right: 1 11 13 18 19 20
cmd (37)
    on left: 14 15, on right: 10 11
stmt (38)
    on left: 16 17, on right: 12 13
stmt_if (39)
    on left: 18 19, on right: 16
stmt_while (40)
    on left: 20, on right: 17
cmd_saida (41)
    on left: 21, on right: 14
cmd_atribuicao (42)
    on left: 22, on right: 15
expr (43)
    on left: 23 24, on right: 18 19 20 21 22 24
term (44)
    on left: 25 26, on right: 23
term2 (45)
    on left: 27 28, on right: 24
binop (46)
    on left: 29 30 31 32, on right: 24


state 0

    0 $accept: . programa $end

    INT   shift, and go to state 1
    CHAR  shift, and go to state 2

    programa     go to state 3
    declaracoes  go to state 4
    linha_decl   go to state 5
    type         go to state 6


state 1

    6 type: INT .

    $default  reduce using rule 6 (type)


state 2

    7 type: CHAR .

    $default  reduce using rule 7 (type)


state 3

    0 $accept: programa . $end

    $end  shift, and go to state 7


state 4

    1 programa: declaracoes . '{' lista_cmds '}'

    '{'  shift, and go to state 8


state 5

    2 declaracoes: linha_decl .
    3            | linha_decl . declaracoes

    INT   shift, and go to state 1
    CHAR  shift, and go to state 2

    $default  reduce using rule 2 (declaracoes)

    declaracoes  go to state 9
    linha_decl   go to state 5
    type         go to state 6


state 6

    5 linha_decl: type . $@1 lista_id ';'

    $default  reduce using rule 4 ($@1)

    $@1  go to state 10


state 7

    0 $accept: programa $end .

    $default  accept


state 8

    1 programa: declaracoes '{' . lista_cmds '}'

    ESCREVA  shift, and go to state 11
    ID       shift, and go to state 12
    IF       shift, and go to state 13
    WHILE    shift, and go to state 14

    lista_cmds      go to state 15
    cmd             go to state 16
    stmt            go to state 17
    stmt_if         go to state 18
    stmt_while      go to state 19
    cmd_saida       go to state 20
    cmd_atribuicao  go to state 21


state 9

    3 declaracoes: linha_decl declaracoes .

    $default  reduce using rule 3 (declaracoes)


state 10

    5 linha_decl: type $@1 . lista_id ';'

    ID  shift, and go to state 22

    lista_id  go to state 23


state 11

   21 cmd_saida: ESCREVA . '(' expr ')'

    '('  shift, and go to state 24


state 12

   22 cmd_atribuicao: ID . '=' expr

    '='  shift, and go to state 25


state 13

   18 stmt_if: IF . '(' expr ')' '{' lista_cmds '}'
   19        | IF . '(' expr ')' '{' lista_cmds '}' ELSE '{' lista_cmds '}'

    '('  shift, and go to state 26


state 14

   20 stmt_while: WHILE . '(' expr ')' '{' lista_cmds '}'

    '('  shift, and go to state 27


state 15

    1 programa: declaracoes '{' lista_cmds . '}'

    '}'  shift, and go to state 28


state 16

   10 lista_cmds: cmd . ';'
   11           | cmd . ';' lista_cmds

    ';'  shift, and go to state 29


state 17

   12 lista_cmds: stmt .
   13           | stmt . lista_cmds

    ESCREVA  shift, and go to state 11
    ID       shift, and go to state 12
    IF       shift, and go to state 13
    WHILE    shift, and go to state 14

    $default  reduce using rule 12 (lista_cmds)

    lista_cmds      go to state 30
    cmd             go to state 16
    stmt            go to state 17
    stmt_if         go to state 18
    stmt_while      go to state 19
    cmd_saida       go to state 20
    cmd_atribuicao  go to state 21


state 18

   16 stmt: stmt_if .

    $default  reduce using rule 16 (stmt)


state 19

   17 stmt: stmt_while .

    $default  reduce using rule 17 (stmt)


state 20

   14 cmd: cmd_saida .

    $default  reduce using rule 14 (cmd)


state 21

   15 cmd: cmd_atribuicao .

    $default  reduce using rule 15 (cmd)


state 22

    8 lista_id: ID .
    9         | ID . ',' lista_id

    ','  shift, and go to state 31

    $default  reduce using rule 8 (lista_id)


state 23

    5 linha_decl: type $@1 lista_id . ';'

    ';'  shift, and go to state 32


state 24

   21 cmd_saida: ESCREVA '(' . expr ')'

    NUM  shift, and go to state 33
    ID   shift, and go to state 34

    expr  go to state 35
    term  go to state 36


state 25

   22 cmd_atribuicao: ID '=' . expr

    NUM  shift, and go to state 33
    ID   shift, and go to state 34

    expr  go to state 37
    term  go to state 36


state 26

   18 stmt_if: IF '(' . expr ')' '{' lista_cmds '}'
   19        | IF '(' . expr ')' '{' lista_cmds '}' ELSE '{' lista_cmds '}'

    NUM  shift, and go to state 33
    ID   shift, and go to state 34

    expr  go to state 38
    term  go to state 36


state 27

   20 stmt_while: WHILE '(' . expr ')' '{' lista_cmds '}'

    NUM  shift, and go to state 33
    ID   shift, and go to state 34

    expr  go to state 39
    term  go to state 36


state 28

    1 programa: declaracoes '{' lista_cmds '}' .

    $default  reduce using rule 1 (programa)


state 29

   10 lista_cmds: cmd ';' .
   11           | cmd ';' . lista_cmds

    ESCREVA  shift, and go to state 11
    ID       shift, and go to state 12
    IF       shift, and go to state 13
    WHILE    shift, and go to state 14

    $default  reduce using rule 10 (lista_cmds)

    lista_cmds      go to state 40
    cmd             go to state 16
    stmt            go to state 17
    stmt_if         go to state 18
    stmt_while      go to state 19
    cmd_saida       go to state 20
    cmd_atribuicao  go to state 21


state 30

   13 lista_cmds: stmt lista_cmds .

    $default  reduce using rule 13 (lista_cmds)


state 31

    9 lista_id: ID ',' . lista_id

    ID  shift, and go to state 22

    lista_id  go to state 41


state 32

    5 linha_decl: type $@1 lista_id ';' .

    $default  reduce using rule 5 (linha_decl)


state 33

   25 term: NUM .

    $default  reduce using rule 25 (term)


state 34

   26 term: ID .

    $default  reduce using rule 26 (term)


state 35

   21 cmd_saida: ESCREVA '(' expr . ')'
   24 expr: expr . binop term2

    ADD  shift, and go to state 42
    SUB  shift, and go to state 43
    DIV  shift, and go to state 44
    MUL  shift, and go to state 45
    ')'  shift, and go to state 46

    binop  go to state 47


state 36

   23 expr: term .

    $default  reduce using rule 23 (expr)


state 37

   22 cmd_atribuicao: ID '=' expr .
   24 expr: expr . binop term2

    ADD  shift, and go to state 42
    SUB  shift, and go to state 43
    DIV  shift, and go to state 44
    MUL  shift, and go to state 45

    $default  reduce using rule 22 (cmd_atribuicao)

    binop  go to state 47


state 38

   18 stmt_if: IF '(' expr . ')' '{' lista_cmds '}'
   19        | IF '(' expr . ')' '{' lista_cmds '}' ELSE '{' lista_cmds '}'
   24 expr: expr . binop term2

    ADD  shift, and go to state 42
    SUB  shift, and go to state 43
    DIV  shift, and go to state 44
    MUL  shift, and go to state 45
    ')'  shift, and go to state 48

    binop  go to state 47


state 39

   20 stmt_while: WHILE '(' expr . ')' '{' lista_cmds '}'
   24 expr: expr . binop term2

    ADD  shift, and go to state 42
    SUB  shift, and go to state 43
    DIV  shift, and go to state 44
    MUL  shift, and go to state 45
    ')'  shift, and go to state 49

    binop  go to state 47


state 40

   11 lista_cmds: cmd ';' lista_cmds .

    $default  reduce using rule 11 (lista_cmds)


state 41

    9 lista_id: ID ',' lista_id .

    $default  reduce using rule 9 (lista_id)


state 42

   29 binop: ADD .

    $default  reduce using rule 29 (binop)


state 43

   30 binop: SUB .

    $default  reduce using rule 30 (binop)


state 44

   32 binop: DIV .

    $default  reduce using rule 32 (binop)


state 45

   31 binop: MUL .

    $default  reduce using rule 31 (binop)


state 46

   21 cmd_saida: ESCREVA '(' expr ')' .

    $default  reduce using rule 21 (cmd_saida)


state 47

   24 expr: expr binop . term2

    NUM  shift, and go to state 50
    ID   shift, and go to state 51

    term2  go to state 52


state 48

   18 stmt_if: IF '(' expr ')' . '{' lista_cmds '}'
   19        | IF '(' expr ')' . '{' lista_cmds '}' ELSE '{' lista_cmds '}'

    '{'  shift, and go to state 53


state 49

   20 stmt_while: WHILE '(' expr ')' . '{' lista_cmds '}'

    '{'  shift, and go to state 54


state 50

   27 term2: NUM .

    $default  reduce using rule 27 (term2)


state 51

   28 term2: ID .

    $default  reduce using rule 28 (term2)


state 52

   24 expr: expr binop term2 .

    $default  reduce using rule 24 (expr)


state 53

   18 stmt_if: IF '(' expr ')' '{' . lista_cmds '}'
   19        | IF '(' expr ')' '{' . lista_cmds '}' ELSE '{' lista_cmds '}'

    ESCREVA  shift, and go to state 11
    ID       shift, and go to state 12
    IF       shift, and go to state 13
    WHILE    shift, and go to state 14

    lista_cmds      go to state 55
    cmd             go to state 16
    stmt            go to state 17
    stmt_if         go to state 18
    stmt_while      go to state 19
    cmd_saida       go to state 20
    cmd_atribuicao  go to state 21


state 54

   20 stmt_while: WHILE '(' expr ')' '{' . lista_cmds '}'

    ESCREVA  shift, and go to state 11
    ID       shift, and go to state 12
    IF       shift, and go to state 13
    WHILE    shift, and go to state 14

    lista_cmds      go to state 56
    cmd             go to state 16
    stmt            go to state 17
    stmt_if         go to state 18
    stmt_while      go to state 19
    cmd_saida       go to state 20
    cmd_atribuicao  go to state 21


state 55

   18 stmt_if: IF '(' expr ')' '{' lista_cmds . '}'
   19        | IF '(' expr ')' '{' lista_cmds . '}' ELSE '{' lista_cmds '}'

    '}'  shift, and go to state 57


state 56

   20 stmt_while: WHILE '(' expr ')' '{' lista_cmds . '}'

    '}'  shift, and go to state 58


state 57

   18 stmt_if: IF '(' expr ')' '{' lista_cmds '}' .
   19        | IF '(' expr ')' '{' lista_cmds '}' . ELSE '{' lista_cmds '}'

    ELSE  shift, and go to state 59

    $default  reduce using rule 18 (stmt_if)


state 58

   20 stmt_while: WHILE '(' expr ')' '{' lista_cmds '}' .

    $default  reduce using rule 20 (stmt_while)


state 59

   19 stmt_if: IF '(' expr ')' '{' lista_cmds '}' ELSE . '{' lista_cmds '}'

    '{'  shift, and go to state 60


state 60

   19 stmt_if: IF '(' expr ')' '{' lista_cmds '}' ELSE '{' . lista_cmds '}'

    ESCREVA  shift, and go to state 11
    ID       shift, and go to state 12
    IF       shift, and go to state 13
    WHILE    shift, and go to state 14

    lista_cmds      go to state 61
    cmd             go to state 16
    stmt            go to state 17
    stmt_if         go to state 18
    stmt_while      go to state 19
    cmd_saida       go to state 20
    cmd_atribuicao  go to state 21


state 61

   19 stmt_if: IF '(' expr ')' '{' lista_cmds '}' ELSE '{' lista_cmds . '}'

    '}'  shift, and go to state 62


state 62

   19 stmt_if: IF '(' expr ')' '{' lista_cmds '}' ELSE '{' lista_cmds '}' .

    $default  reduce using rule 19 (stmt_if)
